# amlichvietnam

./: .gitignore  LICENSE  README.md  README.txt  pyproject.toml
.github/: publish.yml
.github/workflows/: ci.yml  publish.yml
docs/: comparison_chinese_lunar.md
scripts/: benchmark.py
src/lunar_vn/: __init__.py  can_chi.py  core.py  holidays.py
tests/: test_can_chi.py  test_core.py  test_holidays.py
