[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar_vn"
version = "1.0.0"
description = "Vietnamese lunar calendar conversion (Ho Ngoc Duc algorithm, per calrules)"
readme = "README.txt"
requires-python = ">=3.9"
authors = [{ name = "thongbui" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lunar_vn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

